HHH-6791 tiny improvement, in favor of java auto-box instead of create new instance